# nordic_zephyr_learn

./: CMakeLists.txt  Kconfig  prj.conf
boards/: nrf52840dk_nrf52840.overlay
configuration/: sensor_manager_def.h
my_lvgl/: CMakeLists.txt  my_lvgl.code-workspace  prj.conf
my_lvgl/boards/: nrf52840dk_nrf52840.overlay
my_lvgl/src/: main.c
my_lvgl/src/app/: CMakeLists.txt  backlight_ctrl.c  backlight_ctrl.h  key_ebtn.c  key_ebtn.h
my_lvgl/src/ble/: CMakeLists.txt  ble_comm.c  ble_comm.h  ble_defs.h  ble_proto.c  ble_proto.h  ble_proto_time.c  ble_transport.c  ble_transport.h  time_bus.c  time_bus.h
my_lvgl/src/sensor/: CMakeLists.txt  bmi270_hal.c  bmi270_hal.h  steps_service.c  steps_service.h
my_lvgl/src/ui/: CMakeLists.txt  lv_watch_tileview.c  lv_watch_tileview.h  lv_watch_tileview_private.h  touch_fix.c  ui_app.c  ui_app.h  ui_main_view.c  ui_main_view.h  ui_settings_sleep.c  ui_settings_sleep.h  ui_steps_display.c  ui_steps_display.h  ui_time_display.c  ui_time_display.h
nrfx_timer_demo/: CMakeLists.txt
nrfx_timer_demo/src/: main.c
sensor_oled_demo/: CMakeLists.txt
sensor_oled_demo/boards/: nrf52840dk_nrf52840.overlay
sensor_oled_demo/src/: main.c
sensor_oled_demo/src/modules/: CMakeLists.txt
src/: main.c
src/modules/: CMakeLists.txt  Kconfig  sensor_aggregator.c  sensor_print.c  sensor_stub_gen.c  workload_sim.c
